--- a/index.html
+++ b/index.html
@@ -15,5 +15,21 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <div id="app">
+      <main>
+        <div class="main-container">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia, officia. Perferendis at possimus ab totam
+          quam amet, neque eius debitis unde nisi inventore facere recusandae, reiciendis non fugit doloribus eveniet?
+        </div>
+      </main>
+
+      <aside>
+        <div class="aside-container">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ab quasi ut excepturi saepe reiciendis
+          culpa, dolore repudiandae fuga sed? Rem fugit velit ut veniam quam excepturi error iure nam.
+        </div>
+      </aside>
+    </div>
+  </body>
 </html>
