conteudo aside e conteudo inicial do main

--- a/index.html
+++ b/index.html
@@ -19,15 +19,34 @@
     <div id="app">
       <main>
         <div class="main-container">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia, officia. Perferendis at possimus ab totam
-          quam amet, neque eius debitis unde nisi inventore facere recusandae, reiciendis non fugit doloribus eveniet?
+          <div class="back">
+            <img src="assets/icons/arrow-left-02.svg" alt="Ícone de voltar" />
+            <span>Voltar</span>
+          </div>
+
+          <h1>Formulário de matrícula</h1>
+          <p>
+            Preencha os dados abaixo para matricular seu filho na escola de educação infantil
+            Estrelas do Amanhã.
+          </p>
         </div>
       </main>
 
       <aside>
         <div class="aside-container">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ab quasi ut excepturi saepe reiciendis
-          culpa, dolore repudiandae fuga sed? Rem fugit velit ut veniam quam excepturi error iure nam.
+          <header>
+            <img src="assets/logo.svg" alt="Logo estrelas do amanhã" />
+            <h2>Porque cada momento de <span>aprendizado</span> conta</h2>
+            <p>
+              Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro
+              e estimulante.
+            </p>
+          </header>
+
+          <img
+            src="assets/Illustration.svg"
+            alt="Ilustração de uma professora com crianças prestrando atenção"
+          />
         </div>
       </aside>
     </div>
