--- a/index.html
+++ b/index.html
@@ -236,6 +236,12 @@
                 <strong>Política de Privacidade</strong> da escola Estrela do Amanhã.
               </label>
             </div>
+
+            <div class="action-wrapper">
+              <button class="btn-secondary" type="button">Salvar respostas</button>
+
+              <button class="btn-primary" type="submit">Fazer matrícula</button>
+            </div>
           </form>
         </div>
       </main>
